# doc-quailty-gate

./: .gitignore  AGENTS.md  Makefile  README.md  docker-compose.yml  dqg-review.bat  dqg-review.command  pyproject.toml  setup.bat  setup.command  start-proxy.bat  start-proxy.command  start-web.bat  start-web.command
.opencode/commands/: dqg.md
config/: app.yaml  model_routing.yaml  thresholds.yaml
config/litellm/: config.yaml
config/promptfoo/: promptfooconfig.yaml  scoring.py
config/promptfoo/rubrics/: architecture_change.yaml  feature_spec.yaml  generic.yaml  implementation_plan.yaml  incident_action_plan.yaml  migration_plan.yaml  (+1 more)
config/prompts/: critic_a.md  critic_b.md  critic_judge.md  cross_reference.md  deep_analyst.md  meta_judge.md  reviser.md  scorer.md  validator.md
docs/: architecture.md  litellm-routing.md  promptfoo-scoring.md  usage.md
examples/architecture_change/: sample.md
examples/feature_spec/: sample.md
examples/implementation_plan/: sample.md
scripts/: dqg-review.ps1  dqg-review.sh  dqg_run.py  setup.ps1  setup.sh
scripts/linux/: dqg-review.sh  setup.sh  start-proxy.sh  start.sh  stop.sh
scripts/mac/: dqg-review.command  dqg-review.sh  setup.command  start-web.command  start.command  start.sh
scripts/win/: dqg-review.bat  dqg-review.ps1  setup.ps1  start-proxy.bat  start-web.bat  start.ps1  stop.ps1
src/app/: cli.py  config.py  orchestrator.py  schemas.py
tests/: test_cli.py  test_litellm_integration_mocked.py  test_pipeline_smoke.py  test_promptfoo_integration.py  test_schemas.py  test_thresholds.py
(+20 files in other folders)
